--- a/perldoc/ko/perl/5.10/perlvar.pod
+++ b/perldoc/ko/perl/5.10/perlvar.pod
@@ -1857,8 +1857,8 @@ C<$^E>, also.  (Mnemonic: Extra error explanation.)
 
 =end original
 
-C<$!> “ªÎ’Àâ“Ù¥“ªÇ‘´¥“ªì“ª¿“Ùý“ð¹“ïÃ“ªÏ“ìé“Úõ“îÜ“ªË C<$^E> “ªË“ªâ“îê“éÄ“ªµ“ªì“ªÞ“ª¹“¡£
-(“ÑÀ“åã“Ûö: “õÚ“Ê¥“ªÎ(Extra)“«¨“«é’¡¼“ªÎ’Àâ“Ù¥“¡£)
+C<$!> “ÀÇ “¼³“¸í“¿¡“¼­ “Á¢“ÇÑ “¹®“Á¦“Á¡“Àº “ÀÏ“¹Ý“Àû“À¸“·Î“´Â C<$^E> “¿¡“µµ “Àû“¿ë“µË“´Ï“´Ù.
+(“±â“¾ï“¹ý: “Ãß“°¡“ÀÇ (Extra) “¿¡“·¯“ÀÇ “¼³“¸í.)
 
 =begin original
 
@@ -1866,7 +1866,7 @@ Also see L<Error Indicators>.
 
 =end original
 
-L<Error Indicators> “ªâ‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+L<Error Indicators> “µµ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =item $EVAL_ERROR
 
@@ -1882,11 +1882,10 @@ normal fashion).  (Mnemonic: Where was the syntax error "at"?)
 
 =end original
 
-“õÌ“ý­“ªÎ eval() “ðÃ“íÂ“í­“ªË“ªè“ªë Perl “ªÎ“Ï°“Ùþ“«¨“«é’¡¼“«á“«Ã“«»’¡¼“«¸“ªÇ“ª¹“¡£
-$@ “ª¬“Íö“Ùþ“í®“Öª“ªÇ“ª¢“ªì“ªÐ“¡¢“õÌ“ý­“ªÎ eval() “ª¬“ïá“ßÈ“ªË
-“ú°“à°“ªµ“ªì“¡¢’¼Â“ú¼“ªµ“ªì“ª¿“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹ (“ª¬“¡¢’¼Â“ú¼“ª·“ª¿“æÑ“ß©“í­“ª¬“¡¢
-“÷×“ßÈ“ªÎ“ëò“Ú«“ªÇ“ã÷“ø¨“ª·“ªÆ“ª¤“ªë“ª«“ªâ“ª·“ªì“ªÞ“ª»“ªó)“¡£
-(“ÑÀ“åã“Ûö: “ªÉ“ª³“ªÇ ("at" where) “Ï°“Ùþ“«¨“«é’¡¼“ª¬“ÑÃ“ªÃ“ª¿“ª«“¡£)
+“¸¶“Áö“¸·“ÀÇ eval() “Á¶“ÀÛ“ÀÚ“¿¡ “ÀÇ“ÇÑ Perl “ÀÇ “±¸“¹®“¿¡“·¯ “¸Þ“½Ã“Áö“ÀÔ“´Ï“´Ù.
+$@ “°¡ “ºó“¹®“ÀÚ“¿­“ÀÌ“¸é “¸¶“Áö“¸·“ÀÇ eval() “ÀÌ “Á¤“»ó“Àû“À¸“·Î “ÇØ“¼®“µÇ“¾î, “½Ç“Çà“µÇ“°Ô 
+“µË“´Ï“´Ù.(“ÇÏ“Áö“¸¸, “½Ç“Çà“ÇÑ “¿¬“»ê“ÀÚ“°¡ “Åë“»ó“ÀÇ “ÀÇ“¹Ì“¿¡“¼­ “½Ç“ÆÐ“ÇÒ“Áö“µµ “¸ð“¸¨“´Ï“´Ù).
+(“±â“¾ï“¹ý: “¾î“µð“¿¡“¼­ ("at" where) “±¸“¹®“¿¡“·¯“°¡ “¹ß“»ý“Çß“´Â“°¡?)
 
 =begin original
 
@@ -1896,9 +1895,9 @@ as described below.
 
 =end original
 
-“Ìí“Í±“«á“«Ã“«»’¡¼“«¸“ªÏ“ª³“ªÎ’ÊÑ‘Êý“ªË“ìý“ªê“ªÞ“ª»“ªó“¡£
-“ª·“ª«“ª·“¡¢“ý­“âû“ª¹“ªë C<$SIG{__WARN__}> “ªË“«»“«Ã“«È“ª¹“ªë“ª³“ªÈ“ªÇ
-“Ìí“Í±“ªò’½è“×â“ª¹“ªë“«ë’¡¼“«Á“«ó“ªò“àâ“ïÒ“ªÇ“ª­“ªÞ“ª¹“¡£
+“°æ“°í“¸Þ“½Ã“Áö“´Â “ÀÌ “º¯“¼ö“¿¡ “µé“¾î“°¡“Áö “¾Ê“½À“´Ï“´Ù.
+“±×“·¯“³ª “±â“¼ú“ÇÑ C<$SIG{__WARN__}> “¿¡ “¼³“Á¤“ÇÏ“´Â “°Í“À¸“·Î 
+“°æ“°í“¸¦ “Ã³“¸®“ÇÏ“´Â “·ç“Æ¾“À» “¼³“Á¤“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -1906,7 +1905,7 @@ Also see L<Error Indicators>.
 
 =end original
 
-L<Error Indicators> “ªâ‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+L<Error Indicators> “µµ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =item $PROCESS_ID
 
@@ -1923,10 +1922,10 @@ across fork() calls.  (Mnemonic: same as shells.)
 
 =end original
 
-“«¹“«¯“«ê“«×“«È“ªò’¼Â“ú¼“ª·“ªÆ“ª¤“ªë Perl “ªÎ“«×“«í“«»“«¹“Ûã‘ºÅ“ªÇ“ª¹“¡£
-“ª³“ªÎ’ÊÑ‘Êý“ªÏ read-only “ªÈ“ÍÅ“ª¨“ªë“ªÙ“ª­“ªÇ“ª¹“ª¬“¡¢
-fork() “û¼“ªÓ“õó“ª·“ªË“ªè“ªÃ“ªÆ“ö·“ªÏ’ÊÑ“ªï“ªê“ªÞ“ª¹“¡£
-(“ÑÀ“åã“Ûö: “«·“«§“«ë“ªÈ“ÔÒ“ª¸“¡£)
+“½º“Å©“¸³“Æ®“¸¦ “½Ç“Çà“ÇÏ“´Â Perl “ÀÇ “ÇÁ“·Î“¼¼“½º“¹ø“È£“ÀÔ“´Ï“´Ù.
+“ÀÌ “º¯“¼ö“´Â read-only “·Î “»ý“°¢“ÇØ“¾ß “ÇÏ“Áö“¸¸, 
+fork() “È£“Ãâ“¿¡ “ÀÇ“ÇØ “°ª“Àº “¹Ù“²ò“´Ï“´Ù.
+(“±â“¾ï“¹ý: “¼Ð“°ú “°°“½À“´Ï“´Ù)
 
 =begin original
 
@@ -1962,8 +1961,8 @@ detect any possible errors.
 
 =end original
 
-“Üâ“«×“«í“«»“«¹“ªÎ’¼Â uid “ªò“ãÆ“ª·“ªÞ“ª¹“¡£
-(“ÑÀ“åã“Ûö: setuid “ªÇ’¼Â“ú¼“ñé“ªÇ“ª¢“ªì“ªÐ“¡¢“ª½“ª³“¡¸“ª«“ªé“¡¹‘À´“ª¿ uid “ªÇ“ª¹“¡£)
+“ÀÌ “ÇÁ“·Î“¼¼“½º“ÀÇ “½Ç“Á¦ uid “¸¦ “³ª“Å¸“³À“´Ï“´Ù.
+(“±â“¾ï“¹ý: setuid “¿¡“¼­ “½Ç“Çà“Áß“ÀÌ“¶ó“¸é “°Å“±â"“¿¡“¼­" “¿Â uid“ÀÔ“´Ï“´Ù.)
 You can change both the real uid and
 the effective uid at the same time by using POSIX::setuid().  Since
 changes to $< require a system call, check $! after a change attempt to 
@@ -1983,8 +1982,8 @@ The effective uid of this process.  Example:
 
 =end original
 
-“Üâ“«×“«í“«»“«¹“ªÎ’¼Â’¸ú uid “ªò“ãÆ“ª·“ªÞ“ª¹“¡£
-“ÖÇ:
+“ÀÌ “ÇÁ“·Î“¼¼“½º“ÀÇ “½Ç“Á¦ uid “¸¦ “³ª“Å¸“³À“´Ï“´Ù.
+“¿¹“Á¦:
 
     $< = $>;		# set real to effective uid
     ($<,$>) = ($>,$<);	# swap real and effective uid
@@ -2010,9 +2009,9 @@ supporting setreuid().
 
 =end original
 
-(“ÑÀ“åã“Ûö: setuid “ªÇ’¼Â“ú¼“ñé“ªÇ“ª¢“ªì“ªÐ“¡¢“ª½“ª³“¡¸“ªØ“¡¹“ú¼“ª¯ uid“ªÇ“ª¹“¡£)
-C<< $< >> “ªÈ C<< $> >> “ªÎ“Îß“üµ“ªÏ“¡¢setreuid() “ªò“«µ“«Ý’¡¼“«È“ª·“ªÆ“ª¤“ªë
-“«Þ“«·“«ó“ªÇ“ªÎ“ªß“Ê¦“Òö“ªÇ“ª¹“¡£
+(“±â“¾ï“¹ý: setuid “¿¡ “½Ç“Çà“Áß“ÀÌ“¶ó“¸é “±×“°÷"“À¸“·Î" “°¡“´Â uid “ÀÔ“´Ï“´Ù)
+C<< $< >> “¿Í C<< $> >> “ÀÇ “º¯“È¯“Àº setreuid() “¸¦ “Áö“¿ø“ÇÏ“´Â 
+“¸Ó“½Å“¿¡“¼­“¸¸ “°¡“´É“ÇÕ“´Ï“´Ù.
 
 =item $REAL_GROUP_ID
 
@@ -2031,12 +2030,12 @@ the same as the first number.
 
 =end original
 
-“Üâ“«×“«í“«»“«¹“ªÎ’¼Â gid “ªò“ãÆ“ª·“ªÞ“ª¹“¡£
-“ÔÒ“ãÁ“ªË“ÜÜ‘Êý“ªÎ“«°“«ë’¡¼“«×“ªË“á¶‘Êô“ªÇ“ª­“ªë“«Þ“«·“«ó“ªÇ“ªÏ“¡¢“á¶‘Êô“ª¹“ªë“«°“«ë’¡¼“«×“ªò“«¹“«Ú’¡¼“«¹“ªÇ
-‘Çø“ï·“ªÃ“ª¿“«ê“«¹“«È“ª¬“Ôð“ªé“ªì“ªÞ“ª¹“¡£
-“õÌ“ôø“ªÎ‘Êý“ö·“ªÏ“¡¢getgid() “ªÇ“Ú÷“ªµ“ªì“ªë“ªâ“ªÎ“ªÇ“ª¹“¡£
-“ª½“ªÎ“ý­“ªË getgroups() “ª¬“Ú÷“ª¹“ö·“ª¬’Â³“ª­“¡¢“ª½“ªÎ“ñé“ªÎ 1 “ªÄ“ªÏ“¡¢
-“õÌ“ôø“ªÎ“ö·“ªÈ“ÔÒ“ª¸“ª«“ªâ“ª·“ªì“ªÞ“ª»“ªó“¡£
+“ÀÌ “ÇÁ“·Î“¼¼“½º“ÀÇ “½Ç“Á¦ gid “¸¦ “³ª“Å¸“³À“´Ï“´Ù.
+“µ¿“½Ã“¿¡ “º¹“¼ö“ÀÇ “±×“·ì“¿¡ “¼Ò“¼Ó“ÇÒ “¼ö “ÀÖ“´Â “¸Ó“½Å“¿¡“¼­“´Â “¼Ò“¼Ó“ÇÏ“´Â “±×“·ì“À» “½º“Æä“ÀÌ“½º“·Î 
+“±¸“ºÐ“ÇÑ “¸®“½º“Æ®“¸¦ “¾ò“À» “¼ö “ÀÖ“½À“´Ï“´Ù.
+“ÃÖ“ÃÊ“ÀÇ “¼ö“Ä¡“´Â getgid() “¿¡“¼­ “¹Ý“È¯“µÈ “°Í“ÀÔ“´Ï“´Ù.
+“±× “µÚ“¿¡ getgroups() “°¡ “¹Ý“È¯“ÇÏ“´Â “°ª“ÀÌ “°è“¼Ó“µÇ“°í “±× “Áß “ÇÏ“³ª“´Â 
+“¸Ç“Ã³“À½“ÀÇ “°ª“°ú “°°“À» “Áö“µµ “¸ð“¸¨“´Ï“´Ù.
 
 =begin original
 
@@ -2048,10 +2047,10 @@ list.
 
 =end original
 
-“ª·“ª«“ª·“¡¢C<$(> “ªË“ÓÛ“ìý“ªµ“ªì“ª¿“ö·“ªÏ’¼Â“ð·“ªÎ gid “ªË“àâ“ïÒ“ªµ“ªì“ª¿“ö·“ªÎ
-“ìé“ªÄ“ªÇ“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
-’½¾“ªÃ“ªÆ“¡¢ C<$(> “ªÇ‘Óë“ª¨“ªé“ªì“ª¿“ö·“ªÏ“«¼“«í“ªò“ðë“ª¹“ª³“ªÈ“ªË“ªè“ªÃ“ªÆ
-‘Êý“ö·“ûù“ª¹“ªë“ª³“ªÈ“ªÊ“ª¯ C<$(> “ªË“ßö“ª­’Ìá“ª¹“ªÙ“ª­“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
+“±×“·¯“³ª C<$(> “¿¡ “´ë“ÀÔ“µÈ “°ª“Àº “½Ç“Á¦ gid “¿¡ “¼³“Á¤“µÈ “°ª“ÀÇ “ÇÏ“³ª“°¡ “¾Æ“´Ï“¸é “¾È“µË“´Ï“´Ù.
+“µû“¶ó“¼­ C<$(> “¿¡ “ÁÖ“¾î“Áø “°ª“Àº “Á¦“·Î“¸¦ “¸¸“Á·“ÇÏ“´Â “°Í“¿¡ “ÀÇ“ÇØ “¼ö“Ä¡“È­“ÇÏ“´Â “ÀÏ “¾ø“ÀÌ 
+C<$(> “¿¡ “½á“¼­ “µÇ“µ¹“·Á“¾ß“ÇÏ“´Â “°Í“Àº “¾Æ“´Õ“´Ï“´Ù.
+
 Note
 that this is different to the effective gid (C<$)>) which does take a
 list.
@@ -2065,7 +2064,8 @@ to detect any possible errors after an attempted change.
 
 =end original
 
-POSIX::setgid() “ªò“ÞÅ“ªÃ“ªÆ“¡¢’¼Â GID “ªÈ’¼Â’¸ú GID “ªÎ’Î¾“Û°“ªò“ÔÒ“ãÁ“ªË’ÊÑ“ÌÚ“ªÇ“ª­“ªÞ“ª¹“¡£
+POSI“¤¼::setgid() “¸¦ “»ç“¿ë“ÇØ“¼­, “½Ç“Á¦ GID “¿Í “½Ç“È¿ GID “ÀÇ “¾ç“ÂÊ“À» “µ¿“½Ã“¿¡ 
+“º¯“°æ“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
 Changes to $( require a check to $!
 to detect any possible errors after an attempted change.
 (TBT)
@@ -2077,9 +2077,9 @@ group you I<left>, if you're running setgid.)
 
 =end original
 
-(“ÑÀ“åã“Ûö: “ÎÀ“ûÁ“ªÏ“¡¢I<“«°“«ë’¡¼“«×“ûù>“ªË“ÞÅ“ªï“ªì“ªÞ“ª¹“¡£
-setgid “ªÇ’¼Â“ú¼“ñé“ªÇ“ª¢“ªì“ªÐ“¡¢’¼Â gid “ªÏ I<left> “ª·“ª¿“¡¢
-“ªÄ“ªÞ“ªê“×î“ªì“ª¿“«°“«ë’¡¼“«×“ªÇ“ª¹“¡£)
+(“±â“¾ï“¹ý: “°ý“È£“´Â I<“±×“·ì“È­> “¿¡ “»ç“¿ë“µË“´Ï“´Ù.
+setgid “¿¡“¼­ “½Ç“Çà“Áß“ÀÌ“¶ó“¸é “½Ç“Á¦ gid “´Â I<left> “ÇÑ 
+“Áï “¶³“¾î“Áø “±×“·ì“ÀÔ“´Ï“´Ù)
 
 =item $EFFECTIVE_GROUP_ID
 
@@ -2098,12 +2098,12 @@ which may be the same as the first number.
 
 =end original
 
-“Üâ“«×“«í“«»“«¹“ªÎ’¼Â’¸ú gid “ªò“ãÆ“ª·“ªÞ“ª¹“¡£
-“ÔÒ“ãÁ“ªË“ÜÜ‘Êý“ªÎ“«°“«ë’¡¼“«×“ªË“á¶‘Êô“ªÇ“ª­“ªë“«Þ“«·“«ó“ªÇ“ªÏ“¡¢
-“á¶‘Êô“ª¹“ªë“«°“«ë’¡¼“«×“ªò“«¹“«Ú’¡¼“«¹“ªÇ‘Çø“ï·“ªÃ“ª¿“«ê“«¹“«È“ª¬“Ôð“ªé“ªì“ªÞ“ª¹“¡£
-“õÌ“ôø“ªÎ‘Êý“ö·“ªÏ“¡¢getegid() “ªÇ“Ú÷“ªµ“ªì“ªë“ªâ“ªÎ“ªÇ“ª¹“¡£
-“ª½“ªÎ“ý­“ªË getgroups()“ª¬“Ú÷“ª¹“ö·“ª¬’Â³“ª­“¡¢“ª½“ªÎ“ñé“ªÎ 1 “ªÄ“ªÏ“¡¢
-“õÌ“ôø“ªÎ“ö·“ªÈ“ÔÒ“ª¸“ª«“ªâ“ª·“ªì“ªÞ“ª»“ªó“¡£
+“ÀÌ “ÇÁ“·Î“¼¼“½º“ÀÇ “½Ç“È¿ gid “¸¦ “³ª“Å¸“³À“´Ï“´Ù.
+“µ¿“½Ã“¿¡ “º¹“¼ö“ÀÇ “±×“·ì“¿¡ “¼Ò“¼Ó“ÇÒ “¼ö “ÀÖ“´Â “¸Ó“½Å“¿¡“¼­“´Â 
+“¼Ò“¼Ó“ÇÏ“´Â “±×“·ì“À» “½º“Æä“ÀÌ“½º“·Î “±¸“ºÐ“ÇÑ “¸®“½º“Æ®“¸¦ “¾ò“À» “¼ö “ÀÖ“½À“´Ï“´Ù.
+“ÃÖ“ÃÊ“ÀÇ “¼ö“Ä¡“´Â getgid() “¿¡“¼­ “¹Ý“È¯“µÈ “°Í“ÀÔ“´Ï“´Ù.
+“±× “µÚ“¿¡ getgroups() “°¡ “¹Ý“È¯“ÇÏ“´Â “°ª“ÀÌ “°è“¼Ó“µÇ“°í, “±× “Áß“ÀÇ “ÇÏ“³ª“´Â 
+“ÃÖ“ÃÊ“ÀÇ “°ª“°ú “°°“À»“Áö“µµ “¸ð“¸¨“´Ï“´Ù.
 
 =begin original
 
@@ -2116,14 +2116,14 @@ list, say C< $) = "5 5" >.
 
 =end original
 
-“ÔÒ’ÍÍ“ªË“¡¢C<$)> “ªØ“ÓÛ“ìý“ª¹“ªë“ö·“ªÏ“«¹“«Ú’¡¼“«¹“ªÇ‘Çø“ï·“ªé“ªì“ª¿‘Êý“ö·“ªÎ
-“«ê“«¹“«È“ªÇ“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
-“õÌ“ôø“ªÎ‘Êý“ö·“ªÏ’¼Â’¸ú gid “ªò“àâ“ïÒ“ª·“¡¢‘²Ð“ªê“ªÎ‘Êý“ö·“ªÏ(“ªâ“ª·“ª¢“ªì“ªÐ) setgroups() “ªË
-“Ô¤“ªµ“ªì“ªÞ“ª¹“¡£
-setgroups() “ªË“Íö“«ê“«¹“«È“ªò“Ô¤“ª·“ª¿“ª¤“íÞ“ùê“ªÏ“¡¢’Ã±“ªË“ãæ“ª·“ª¤’¼Â’¸ú gid “ªò
-“ðÛ“ªê“Ú÷“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
-“ªÄ“ªÞ“ªê“¡¢’¼Â’¸ú gid “ªò 5 “ªË“ª·“ªÆ“¡¢setgroups() “ªË“Íö“«ê“«¹“«È“ªò“Ô¤“ª·“ª¿“ª¤“íÞ“ùê“ªÏ“¡¢
-C< $) = "5 5" > “ªÈ“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“¸¶“Âù“¤¿“Áö“·Î, C<$)> “·Î “´ë“ÀÔ“ÇÏ“´Â “°ª“Àº “½º“Æä“ÀÌ“½º“·Î “±¸“ºÐ“µÈ “¼ö“Ä¡“ÀÇ “¸®“½º“Æ®“°¡ 
+“¾Æ“´Ï“¸é “¾È“µË“´Ï“´Ù.
+“ÃÖ“ÃÊ“ÀÇ “¼ö“Ä¡“´Â “½Ç“È¿ gid “¸¦ “¼³“Á¤“ÇÏ“°í, “³²“Àº “¼ö“Ä¡“´Â (“¸¸“¾à “ÀÖ“´Ù“¸é) setgroups() “¿¡
+“³Ñ“°Ü“Áý“´Ï“´Ù.
+setgroups() “¿¡ “ºó“¸®“½º“Æ®“¸¦ “³Ñ“±â“°í “½Í“Àº “°æ“¿ì“´Â “´Ü“¼ø“È÷ “»õ“·Î“¿î “½Ç“È¿ gid “¸¦ 
+“¹Ý“º¹“ÇØ“ÁÖ“¼¼“¿ä.
+“Áï, “½Ç“È¿ gid “¸¦ 5 “·Î “ÇØ“¼­ setgroups() “¿¡ “ºó“¸®“½º“Æ®“¸¦ “³Ñ“±â“°í “½Í“Àº “°æ“¿ì“´Â 
+C< $) = "5 5" > “·Î “ÇØ“ÁÖ“¼¼“¿ä.
 
 =begin original
 
@@ -2147,8 +2147,8 @@ is the group that's I<right> for you, if you're running setgid.)
 
 =end original
 
-(“ÑÀ“åã“Ûö: “ÎÀ“ûÁ“ªÏ“¡¢I<“«°“«ë’¡¼“«×“ûù>“ªË“ÞÅ“ªï“ªì“ªÞ“ª¹“¡£
-setgid “ªÇ’¼Â“ú¼“ñé“ªÇ“ª¢“ªì“ªÐ“¡¢’¼Â’¸ú gid “ªÏ right “ªÊ“¡¢“ªÄ“ªÞ“ªê“ïá“ª·“ª¤“«°“«ë’¡¼“«×“ªÇ“ª¹“¡£)
+(“±â“¾ï“¹ý: “°ý“È£“´Â I<“±×“·ì“È­> “¿¡ “»ç“¿ë“µË“´Ï“´Ù. 
+setgid “¿¡“¼­ “½Ç“Çà“Áß“ÀÌ“¶ó“¸é “½Ç“È¿ gid “´Â right “¸¦ “Áï “¹Ù“¸¥ “±×“·ì“ÀÔ“´Ï“´Ù.)
 
 =begin original
 
@@ -2158,11 +2158,10 @@ and C<$)> can be swapped only on machines supporting setregid().
 
 =end original
 
-C<< $< >>, C<< $> >>, C<$(>, C<$)> “ªÏ“¡¢’¼Â“ú¼“ª¹“ªë“«Þ“«·“«ó“ªÇ“¡¢
-’ÂÐ’±þ“ª¹“ªë I<set[re][ug]id()> “«ë’¡¼“«Æ“«£“«ó“ª¬“«µ“«Ý’¡¼“«È“ªµ“ªì“ªÆ“ª¤“ªë“ªÈ“ª­“ªË“ªÎ“ªß
-“àâ“ïÒ“Ê¦“Òö“ªÇ“ª¹“¡£
-C<$(> “ªÈ C<$)> “ªÎ“Îß“üµ“ªÏ“¡¢
-setregid() “ª¬“«µ“«Ý’¡¼“«È“ªµ“ªì“ªÆ“ª¤“ªë“«Þ“«·“«ó“ªÇ“ªÎ“ªß“Ê¦“Òö“ªÇ“ª¹“¡£
+C<< $< >>, C<< $> >>, C<$(>, C<$)> “Àº “½Ç“Çà“ÇÏ“´Â “¸Ó“½Å“¿¡“¼­ 
+“Áö“¿ø“ÇÏ“´Â I<set[re][ug]>id()> “·ç“Æ¾“ÀÌ “Áö“¿ø“µÉ “¶§“¿¡“¸¸ “¼³“Á¤“°¡“´É“ÇÕ“´Ï“´Ù.
+C<$(> “¿Í C<$)> “ÀÇ “±³“È¯“Àº 
+setregid() “°¡ “Áö“¿ø“µÇ“´Â “¸Ó“½Å“¿¡“¼­“¸¸ “°¡“´É“ÇÕ“´Ï“´Ù.
 
 =item $PROGRAM_NAME
 
@@ -2175,7 +2174,7 @@ Contains the name of the program being executed.
 
 =end original
 
-’¼Â“ú¼“ªµ“ªì“ªÆ“ª¤“ªë“«×“«í“«°“«é“«à“ªÎ“Ù£“îñ“ªò“ãÆ“ª·“ªÞ“ª¹“¡£
+“½Ç“Çà“µÇ“´Â “ÇÁ“·Î“±×“·¥“ÀÇ “ÀÌ“¸§“À» “³ª“Å¸“³À“´Ï“´Ù.
 
 =begin original
 
@@ -2188,6 +2187,7 @@ running.  (Mnemonic: same as B<sh> and B<ksh>.)
 
 =end original
 
+C<$0> “¿¡ “´ë“ÀÔ“À» “¼ö“Çà“ÇÏ“´Â “°Í“À¸“·Î B<ps> “ÇÁ“·Î“±×“·¥“ÀÌ
 C<$0> “ªË“ÓÛ“ìý“ªò“ú¼“ªÊ“ª¦“ª³“ªÈ“ªÇ B<ps>) “«×“«í“«°“«é“«à“ª¬™À¹“ª¯“¡¢
 “ìÚ‘Êý“«¨“«ê“«¢“ªò“áó“ïá“ªÇ“ª­“ªë“«·“«¹“«Æ“«à“ªâ“ª¢“ªê“ªÞ“ª¹(“îï“ªÆ“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó)“¡£
 $0 “ªÎ“áó“ïá“ªÏ“¡¢’¼Â“ú¼“ª·“ªÆ“ª¤“ªë“«×“«í“«°“«é“«à“ªò’±£“ª¹“ªè“ªê“ªÏ“¡¢
