--- a/trunk/perldoc/ko/perl/5.10/perlunitut.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlunitut.pod
@@ -1,5 +1,5 @@
 
-=encoding euc-jp
+=encoding utf-8
 
 =head1 NAME
 
@@ -9,7 +9,7 @@ perlunitut - Perl Unicode Tutorial
 
 =end original
 
-perlunitut - Perl における Unicode のチュートリアル
+perlunitut - Perl 에서의 Unicode 튜토리얼
 
 =head1 DESCRIPTION
 
@@ -23,12 +23,10 @@ it right.
 
 =end original
 
-文字列を単に放り出す日々は終わりました。
-最近のプログラムでは変わったアクセントのついた文字や、ユーロのマークの
-ようなものを通信出来る必要があることが確立しています。
-これは、プログラマは新しい意味が必要であることを意味しています。
-Unicode 対応ソフトウェアをプログラムするのは簡単ですが、それを正しく行うには
-訓練が必要です。
+문자열을 단순히 뽑아내는 나날은 끝났습니다.
+요즘 프로그램에서는 조금 다른 액센트를 붙인 문자나, 유로 마크 같은 것을 통신할 수 있도록 확립되었습니다.
+이것은 프로그래머에게 새로운 의마가 필요하다는 것을 의미합니다.
+Unicode지원 소프트웨어를 프로그램하는 것은 간단하지만, 그것을 바르게 수행하는 것은 훈련이 필요합니다.
 
 =begin original
 
@@ -38,9 +36,8 @@ minutes.
 
 =end original
 
-文字集合とテキストエンコーディングに関しては学ぶべきことがたくさんあります。
-おそらくこれら全てを学ぶのに丸一日を使うのが最良ですが、基本は数分で
-学べます。
+문자집합과 텍스트 인코딩에 관해서는 배워야 할 것이 많이 있습니다.
+아마도 이 모든 것들을 배우는 것은 꼬박 하루를 써야되겠지만, 기본은 몇 분안으로 배울 수 있습니다.
 
 =begin original
 
@@ -54,15 +51,15 @@ L<http://joelonsoftware.com/articles/Unicode.html>.
 
 =end original
 
-しかし、これらは超基本ではありません。
-あなたがすでにバイトと文字の違いを知っていて、様々な文字集合と
-エンコーディングがあることを自覚していて(さらに受け入れていて!)、
-あなたのプログラムがこれらを明示的にする必要がある、と仮定しています。
-お勧めの読み物は Joel Spolsky による
+그러나, 너무 기본적인 것은 아닙니다.
+당신이 이미 바이트와 문자의 차이를 알고 있고, 여러 문자집합과 인코딩이 있다는 것을 
+자각하고 있고(거기에 받아들이고 있고!),
+당신의 프로그램이 이것들을 명시적으로 할 필요가 있다 고 가정하고 있습니다.
+이에 관련해서 추천할 만한 컬럼이 Joel Spolsky 의
 "The Absolute
 Minimum Every Software Developer Absolutely, Positively Must Know About Unicode
 and Character Sets (No Excuses!)" 
-L<http://joelonsoftware.com/articles/Unicode.html> です。
+L<http://joelonsoftware.com/articles/Unicode.html> 입니다.
 
 =begin original
 
@@ -72,13 +69,13 @@ most projects, this information will probably suffice.
 
 =end original
 
-このチュートリアルはどちらかといえば独立した用語を使っていますし、Perl が
-提供している豊富な文字列に関する機能のうち限定された見方のみを扱っています。
-ほとんどのプロジェクトにとっては、おそらくこの情報で十分です。 
+이 튜토리얼은 독립된 용어를 사용하고 있고, Perl 이 
+제공하는 풍부한 문자열에 관한 기능 중에 한정된 시선만을 다룹니다.
+대부분의 프로젝트에서는 아마도 이 정보만으로도 충분할 겁니다. 
 
 =head2 Definitions
 
-(定義)
+(정의)
 
 =begin original
 
@@ -88,10 +85,10 @@ may have found on the web, but that's mostly because many sources are wrong.
 
 =end original
 
-まず、いくつかのことをはっきりさせることが重要です。
-これはこのチュートリアルで最も重要な部分です。
-この考え方はあなたが web で見つけたその他の情報と矛盾するかもしれませんが、
-ほとんどの場合、それは web で見つけた情報の方が間違っているためです。
+우선 몇가지 명확하게 짚고 넘어가야 할 것이 있습니다.
+이것은 튜토리얼에서 가장 중요한 부분입ㄴ디ㅏ.
+이 생각은 당신이 Web 에서 발견한 다른 정보와 모순할지도 모르지만,
+대부분의 경우, 그것은 Web 에서 발견한 정보가 틀렸기 때문이라고 생각해주세요.
 
 =begin original
 
@@ -99,7 +96,7 @@ You may have to re-read this entire section a few times...
 
 =end original
 
-このセクション全体を何回か読み直す必要があるかもしれません…
+이 섹션 전체를 몇번이나 다시 읽을 필요는 없습니다.
 
 =head3 Unicode
 
@@ -110,8 +107,8 @@ value of a character is called a B<code point>.
 
 =end original
 
-B<Unicode> は大量の文字を表現できる文字集合です。
-文字の序数は B<コードポイント> と呼ばれます。
+B<Unicode> 는 대량의 문자를 표현할 ㅜ 있는 문자집합입니다.
+문자의 서수는 B<코드포인트> 라고 불립니다.
 
 =begin original
 
@@ -121,10 +118,9 @@ to make these accessible.
 
 =end original
 
-コードポイントは本当に大量にありますが、コンピュータはバイト単位で
-動いていて、バイトは 256 種類の値のみを持ちます。
-Unicode はもっとたくさんの文字を持っているので、これらにアクセスできるような
-手法が必要です。
+코드 포인트는 정말 많이 있지만, 컴퓨터는 바이트단위로 움직이고, 
+바이트는 256 가지의 값만을 가집니다.
+Unicode 는 더욱 많은 문자를 가질 수 있기 때문에, 이것들에 접근할 수 있는 수법이 필요합니다.
 
 =begin original
 
@@ -134,10 +130,10 @@ store a single code point, or simply: character.
 
 =end original
 
-Unicode はいくつかの競合するエンコーディングを使ってエンコードされていて、
-UTF-8 がもっともよく使われています。
-Unicode のエンコーディングでは、複数の引き続くバイト列を一つのコードポイント
-(あるいは単純に「文字」)を保管するのに使います。
+Unicode 는 몇가지 경합하는 인코딩을 사용해서 인코드되어 있고,
+UTF-8 이 제일 많이 사용되고 있습니다.
+Unicode 의 인코딩에서는 복수의 바이트열을 하나의 코드 포인트
+(혹은 단순히 "문자")를 보관하는 데 사용합니다.
 
 =head3 UTF-8
 
@@ -149,10 +145,10 @@ the world has standardized on UTF-8.
 
 =end original
 
-B<UTF-8> は Unicode のエンコーディングです。
-多くの人々は Unicode と UTF-8 は同じだと考えていますが、違います。
-Unicode のエンコーディングには他にもありますが、世界のほとんどでは標準として
-UTF-8 が使われています。
+B<UTF-8> 은 Unicode 인코딩입니다.
+많은 사람들은 Unicode 와 UTF-8 은 같은 것이라고 생각하지만, 다릅니다.
+Unicode 의 인코딩에는 다른 것도 있지만, 세계 대부분에서 표준으로 
+UTF-8 이 사용되고 있습니다.
 
 =begin original
 
@@ -163,16 +159,14 @@ us, so we don't have to worry about this.
 
 =end original
 
-UTF-8 は最初の 128 のコードポイント(0..127) を ASCII と同様に扱います。
-文字毎に 1 バイトしかかかりません。
-その他の文字は、複雑な仕組みを使って 2 またはそれ以上 (最大 6)のバイトを
-使います。
-幸い、Perl がその作業をするので、私たちがそれについて心配する必要は
-ありません。
+UTF-8 는 최초의 128 코드포인트(0..127)을 ASCII 처럼 다룹니다.
+문자마다 1바이트만 소비합니다.
+그 외의 문자는 복잡한 구조를 사용해서 2 또는 그 이상(최대 6)의 바이트를 사용합니다.
+다행히, Perl 이 그 작업을 하기 때문에, 우리들이 그것에 대해서 걱정할 필요는 없습니다.
 
 =head3 Text strings (character strings)
 
-(テキスト文字列(文字の文字列))
+(텍스트문자열(문자의 문자열)
 
 =begin original
 
@@ -182,9 +176,9 @@ character.
 
 =end original
 
-B<テキスト文字列>、または B<文字の文字列> は文字からなります。
-バイト列はここでは無意味で、エンコーディングがあります。
-各文字は単に文字です。
+B<텍스트 문자열>、또는 B<문자의 문자열> 은 문자에서 비롯됩니다.
+바이트열은 여기에서는 의미없고, 인코딩이 있습니다.
+각 문자는 단순한 문자입니다.
 
 =begin original
 
@@ -193,8 +187,8 @@ string is a Unicode string.
 
 =end original
 
-テキスト文字列は B<Unicode 文字列> とも呼ばれます; なぜなら、Perl では
-テキスト文字列は Unicode 文字列だからです。
+텍스트 문자열은 B<Unicode 문자열> 이라고도 불립니다;
+왜냐면 Perl 에서는 텍스트 문자열은 Unicode 문자열이기 때문입니다.
 
 =begin original
 
@@ -202,7 +196,7 @@ On a text string, you would do things like:
 
 =end original
 
-テキスト文字列では、以下のようにします。
+텍스트 문자열에서는 아래처럼 합니다.
 
     $text =~ s/foo/bar/;
     if ($string =~ /^\d+$/) { ... }
@@ -216,11 +210,11 @@ point.
 
 =end original
 
-文字の値 (C<ord>, C<chr>) は対応する Unicode コードポイントです。
+문자의 값 (C<ord>, C<chr>) 은 지원하는 Unicode 코드 포인트입니다.
 
 =head3 Binary strings (byte strings)
 
-(バイナリ文字列(バイト文字列))
+(바이너리 문자열(바이트문자열))
 
 =begin original
 
@@ -230,10 +224,9 @@ outside of your current Perl process) is done in binary.
 
 =end original
 
-B<バイナリ文字列>、または B<バイト文字列> はバイト列からなります。
-ここでは、文字はなく、単にバイトだけがあります。
-外側の世界(現在の Perl プロセスの外側のあらゆるもの) との通信はバイナリで
-行われます。
+B<바이너리 문자열>、또는 B<바이트문자여> 은 바이트에서 시작합니다.
+여기에서는 문자는 없고, 단순히 바이트만이 있습니다.
+바깥쪽의 세계(현재의 Perl 프로세스 바깥쪽의 모든 것)와의 통신은 바이너리로 움직입니다.
 
 =begin original
 
@@ -241,7 +234,7 @@ On a binary string, you would do things like:
 
 =end original
 
-バイナリ文字列では、以下のようにします:
+바이너리 문자열에서는 아래처럼 합니다.
 
     my (@length_content) = unpack "(V/a)*", $binary;
     $binary =~ s/\x00\x0F/\xFF\xF0/;  # for the brave :)
@@ -250,7 +243,7 @@ On a binary string, you would do things like:
 
 =head3 Encoding
 
-(エンコード)
+(인코딩)
 
 =begin original
 
@@ -262,15 +255,14 @@ conversion.
 
 =end original
 
-B<エンコード> は I<テキスト> から I<バイナリ> への変換です。
-エンコードするには、C<iso-8859-1> や C<UTF-8> のような、エンコード先の
-エンコーディングが必要です。
-C<iso-8859> ("latin") のような一部のエンコーディングは、Unicode 標準に
-完全に対応していません; 表現できない文字は変換時に失われます。
+B<인코딩> 은 I<텍스트> 에서 I<바이너리> 로의 변환입니다.
+인코딩하기 위해서는 C<iso-8859-1>이나 C<UTF-8>같은 인코드의 인코딩이 필요합니다.
+C<iso-8859>("latin")같은 일부의 인코딩은 Unicode 표준으로 완전히 지원하고 있지 않습니다.
+표현할 수 없는 문자는 변환시에 잃게 됩니다.
 
 =head3 Decoding
 
-(デコード)
+(디코딩)
 
 =begin original
 
@@ -281,15 +273,14 @@ text string.
 
 =end original
 
-B<デコード> は I<バイナリ> から I<テキスト> への変換です。
-デコードするには、エンコード時に使われたエンコーディングが何かを知っている
-必要があります。
-そしてそもそも、それはデコード可能である必要があります。
-PNG イメージをテキスト文字列にデコードしてもほとんど意味はないです。
+B<디코딩> 은 I<바이너리> 에서 I<텍스트> 로의 변환입니다.
+디코딩하기 위해서는 인코딩 시에 사용된 인코딩이 뭔가를 알고 있어야할 필요가 있습니다.
+그리고 원래, 그것은 디코딩 가능할 필요가 있습니다.
+PNG 이미지를 텍스트 문자열로 디코딩해도 대부분 의미는 없습니다.
 
 =head3 Internal format
 
-(内部形式)
+(내부형식)
 
 =begin original
 
@@ -299,10 +290,10 @@ In fact, text strings are never in any other format!
 
 =end original
 
-Perl には B<内部形式> と呼ばれる、テキスト文字列をメモリに格納できるように
-エンコードを行うために使うエンコーディングがあります。
-全てのテキスト文字列はこの内部形式になります。
-実際、テキスト文字列が他の形式になることは決してないのです!
+Perl 에는  B<내부형식> 이라고 불리는 텍스트 문자열을 메모리에 넣을 수 있도록 
+인코딩을 수행하기 위해 사용하는 인코딩이 있습니다.
+모든 텍스트 문자열은 이 내부형식이 됩니다.
+실제로, 텍스트문자열이 다른 형식이 되는 것은 절대로 없습니다.
 
 =begin original
 
@@ -311,12 +302,12 @@ automatically done when you decode or encode.
 
 =end original
 
-この形式がどのようなものであるかを気にする必要はないはずです; なぜなら
-変換はデコードやエンコードの際に自動的に行われるからです。
+이 형식이 어떤 것인가를 궁금해할 필요는 없습니다;
+왜냐면 변환은 디코드나 인코드 시에 자동적으로 수행되기 때문입니다.
 
 =head2 Your new toolkit
 
-(新しいツールキット)
+(새로운 툴킷)
 
 =begin original
 
@@ -324,7 +315,7 @@ Add to your standard heading the following line:
 
 =end original
 
-あなたの標準ヘッダに以下の行を追加します:
+당신의 표준 헤더에 아래의 줄을 추가했습니다:
 
     use Encode qw(encode decode);
 
@@ -334,13 +325,13 @@ Or, if you're lazy, just:
 
 =end original
 
-あるいは、あなたが怠け者なら、単に以下のようにします:
+혹은 당신이 나태한 사람이라면 간단히 아래처럼 합니다:
 
     use Encode;
 
 =head2 I/O flow (the actual 5 minute tutorial)
 
-(I/O の流れ(実際の 5 分間チュートリアル))
+(I/O 의 흐름(실제 5분간 튜토리얼))
 
 =begin original
 
@@ -348,7 +339,7 @@ The typical input/output flow of a program is:
 
 =end original
 
-典型的なプログラムの入出力の流れは以下のものです:
+전형적인 프로그램의 입출력 흐름은 아래와 같습니다.
 
 =begin original
 
@@ -358,9 +349,9 @@ The typical input/output flow of a program is:
 
 =end original
 
-    1. 受信してデコードする
-    2. 処理する
-    3. エンコードして出力する
+    1. 수신해서 디코드
+    2. 처리
+    3. 인코드해서 출력
 
 =begin original
 
@@ -369,9 +360,9 @@ it to a text string, of course. But in all other cases, you should decode it.
 
 =end original
 
-もし入力がバイナリで、バイナリのままにしておく必要があるなら、これを
-テキスト文字列にデコードするべきではありません。
-しかし、それ以外の全ての場合では、デコードするべきです。
+만약 입력이 바이너리이고, 바이너리인채로 둘 필요가 있다면,
+이것을 텍스트 문자열로 디코드해야 하는 것은 아닙니다.
+그러나 그 이외의 모든 경우에서는 디코드해야합니다.
 
 =begin original
 
@@ -380,9 +371,9 @@ you get to choose, it's a good idea to standardize on UTF-8.
 
 =end original
 
-もしデータがどのようにエンコードされたか分からないなら、デコードには
-信頼性がありません。
-もしあなたが選択するのなら、UTF-8 に標準化するのはいい考えです。
+만약 데이터가 어떻게 인코드 되었는지 알 수 없을 경우라면, 
+디코드에는 신뢰성이 없습니다.
+만약 당신이 선택한 것이라면, UTF-8 으로 표준화하는 것은 좋은 생각입니다.
 
     my $foo   = decode('UTF-8', get 'http://example.com/');
     my $bar   = decode('ISO-8859-1', readline STDIN);
@@ -396,9 +387,9 @@ C<substr>, or C<length>.
 
 =end original
 
-処理は今まで通りに行います。
-唯一の違いは、バイトではなく文字を使うことです。
-これは C<substr> や C<length> のようなものを使うときにとても便利です。
+처리는 지금까지 하던대로 수행합니다.
+유일한 차이점은 바이트가 아닌 문자를 사용하는 것입니다.
+이것은 C<substr>이나 C<length> 같은 것을 사용할 때에 매우 편리합니다.
 
 =begin original
 
@@ -410,12 +401,12 @@ exactly how many bytes it will be in the destination string.
 
 =end original
 
-テキスト文字列にはバイト列はないということを自覚することは重要です。
-もちろん、Perl は文字列をメモリに保管するために内部形式を使いますが、
-これは無視してください。
-もしバイト数を扱うような何かをする必要があるなら、おそらくその部分を
-ステップ 3 の、文字列をエンコードした直後に移すのが最良です。
-そこで目的の文字列が何バイトになるのかが正確に分かります。
+텍스트 문자열에는 바이트 열은 없다는 것을 자각하는 것이 중요합니다.
+물론 Perl 은 문자열을 메모리에 보관하기 위한 내부형식을 사용하지만,
+이것은 무시해주세요.
+만약 바이트수로 다루는 어떤 일을 할 필요가 있다면, 아마도 그 부분을 스텝 3의 
+문자열을 인코드한 직후에 옮기는 것이 제일 좋습니다.
+거기에서 목적한 문자열이 몇 바이트가 되는 지를 정화갛게 알 수 있습니다.
 
 =begin original
 
@@ -423,8 +414,8 @@ The syntax for encoding text strings to binary strings is as simple as decoding:
 
 =end original
 
-テキスト文字列をバイナリ文字列にするための文法はデコード時と同じぐらい
-単純です:
+텍스트 문자열을 바이너리 문자열로 하기 위한 문법은 디코드 때와 마찬가지로 
+단순합니다.
 
     $body = encode('UTF-8', $body);
 
@@ -437,11 +428,11 @@ characters is no longer known, because characters only exist in text strings.
 
 =end original
 
-もし文字列のバイト数が必要なら、今がそれをする最良のタイミングです。
-なぜなら C<$body> はバイト文字列なので、C<length> は文字数ではなく、
-バイト数を返します。
-文字というものはテキスト文字列でのみ存在するので、もはや文字数というものは
-わからなくなっています。
+만약 문자열의 바이트 수가 필요하다면, 지금이 그것을 할 가장 좋은 타이밍입니다.
+왜냐면 C<$body> 는 바이트 문자열이기 때문에, C<length>는 문자열이 아닌 
+바이트 수를 반환합니다.
+문자라는 것은 텍스트 문자열에서만 존재하기 때문에 더이상 문자수라는 것은 
+알 수 없어집니다.
 
     my $byte_count = length $body;
 
@@ -456,20 +447,19 @@ known.
 
 =end original
 
-そしてもしあなたの使っているプロトコルが、あなたが使ったエンコーディングを
-相手に伝える方法に対応しているなら、その機能を使って受信側を助けてあげて
-ください!
-例えば、E-mail と HTTP は MIME ヘッダに対応しているので、
-C<Content-Type> ヘッダが使えます。
-I<バイト> 数を示すための C<Content-Length> もあるので、もしバイト数が
-わかっているなら、これをつけるのは常に良い考えです。
+그리고 만약 당신이 사용하고 있는 프로토콜이 당신이 사용한 인코딩을 상대에게 전달하는 
+방법을 지원하고 있다면, 그 기능을 사용해서 수신측을 도와주세요.
+예를들어, E-mail 과 HTTP 는 MIME 헤더를 지원하기 때문에,
+C<Content-Type> 헤더를 사용할 수 있습니다.
+I<바이트> 수를 나타내기 위한 C<Content-Length> 도 있기 때문에,
+만약 바이트 수를 알았다면, 이것을 붙이는 것은 좋은 생각입니다.
 
     "Content-Type: text/plain; charset=UTF-8",
     "Content-Length: $byte_count"
 
 =head1 SUMMARY
 
-(まとめ)
+(정리)
 
 =begin original
 
@@ -478,8 +468,8 @@ data.)
 
 =end original
 
-(扱っているのがテキストデータなら)受け取ったもの全てを decode して、
-送り出すもの全てを encode しましょう。
+(다루고 있는 것이 텍스트 데이터라면) 받아들인 모든 것을 디코드해서,
+내보낼 때 인코드합시다.
 
 =head1 Q and A (or FAQ)
 
@@ -489,11 +479,9 @@ After reading this document, you ought to read L<perlunifaq> too.
 
 =end original
 
-この文書を読んだ後、L<perlunifaq> も読むべきです。
+이 문서를 읽은 뒤 L<perlunifaq> 도 읽어야 합니다.
 
 =head1 ACKNOWLEDGEMENTS
-
-(謝辞)
 
 Thanks to Johan Vromans from Squirrel Consultancy. His UTF-8 rants during the
 Amsterdam Perl Mongers meetings got me interested and determined to find out
@@ -512,17 +500,9 @@ Gray.
 
 =head1 AUTHOR
 
-(著者)
-
 Juerd Waalboer <#####@juerd.nl>
 
 =head1 SEE ALSO
 
 L<perlunifaq>, L<perlunicode>, L<perluniintro>, L<Encode>
-
-=begin meta
-
-Created: Kentaro Shirakta <argrath@ub32.org>
-
-=end meta
 
