--- a/perldoc/ko/perl/5.10/perluniintro.pod
+++ b/perldoc/ko/perl/5.10/perluniintro.pod
@@ -49,7 +49,7 @@ Unicode 1.0 was released in October 1991, and 4.0 in April 2003.
 
 =end original
 
-Unicode 와 ISO/IEC 10646 ㅇㄴ 잘 조정된 코드포인트를 제공하는 표준입니다.
+Unicode 와 ISO/IEC 10646 은 잘 조정된 코드포인트를 제공하는 표준입니다.
 Unicode 는 거의 모든 현대 문자셋표준, 30이상의 글자체계와, 100가지 이상의
 언어를 망라합니다.
 모든 상업적으로 중요한 현대의 언어를 포함합니다.
@@ -168,12 +168,12 @@ a combining character.
 
 =end original
 
-この、文字の"すべての順番"の見え方では、文字の総数には、制限がありません。
-ですが、プログラマーの"一つの単位は一つの文字"という考え方では、"文字" の
-概念は、より決定論的です。
-このドキュメントでは、2 番目の考え方を取ります:
-1 つの"文字"は、1 つの Unicode のコードポイントであり、それは、基本文字か、
-combining character であるとします。
+이 문자의 "모든 순서"를 보는 방법으로는 문자의 전체 수에는 제한이 없습니다.
+그렇지만, 프로그래머의 "하나의 단위는 하나의 문자"라는 생각에서는 "문자"의 
+개념은 보다 결정론적입니다.
+이 문서에서는 2번째의 생각을 다룹니다:
+하나의 "문자"는 하나의 Unicode 의 코드포인트이고, 그것은, 기본문자이지만, 
+combining character 이라고 합니다.
 
 =begin original
 
@@ -189,16 +189,16 @@ forms> to standardize representations are also defined.
 
 =end original
 
-いくつかの組合せにとって、I<まだ構成されていない> 文字があります。
-たとえば、C<LATIN CAPITAL LETTER A WITH ACUTE> は、
-単一のコードポイントとして定義されています。
-しかし、これらの、まだ構成されていない文字は、いくつかの組合せで
-可能でしかありません。
-そして、それらは、主に、Unicode と、レガシー標準(ISO 8859 のような)との
-間の相互変換をサポートすることを意味します。
-一般的なケースでは、構成する方法はより広がります。
-違った構成間の変換をサポートするために、表現を標準化する、様々な
-I<normalization forms> もまた定義されています。
+몇가지의 조합에서 I<아직 구성되지 않은> 문자가 있습니다.
+예를들면, C<LATIN CAPITAL LETTER A WITH ACUTE> 는, 
+단일 코드포인트로써 정의되어 있습니다.
+그러나, 이것들의 아직 구성되지 않은 문자는 몇가지 조합으로만 
+가능합니다.
+그리고, 그것들은 주로, Unicode 와 레거시 표준(ISO 8859 같은) 사이의 
+상호호환을 지원하는 것을 의미합니다.
+일반적인 케이스에서는, 구성하는 방법은 보다 넓습니다.
+다른 구성 사이의 변환을 지원하기 때문에, 표현을 표준화하는 여러가지 
+I<normalization forms> 도 또한 정의되어 있습니다.
 
 =begin original
 
@@ -213,17 +213,14 @@ characters that do not represent true characters.
 
 =end original
 
-レガシーエンコーディングとの後方互換性のために、
-"全ての文字に固有の番号" という考えは、少々壊れています:
-その代わりに、"少なくとも全ての文字に 1 つの番号" があります。
-同じ文字が、いくつかのレガシーエンコーディングの中で、違うように
-表現されていました。
-逆は真でもなく: コードポイントには、文字が割り当てられていないものも
-あります。
-1 番目に、使われているブロック内にもかかわらず、割り当てられていない
-コードポイントがあります。
-2 番目に、特別な Unicode のコントロール文字があり、それらは、本物の文字を
-表現しません。
+레거시 인코딩과의 후방호환성을 위해서 
+"모든 문자에 고유의 번호" 라는 생각은 조금씩 무너지고 있습니다:
+그 대신에 "적어도 모든 문자에 하나의 번호"가 있습니다.
+같은 문자가 몇가지의 레거시 인코딩 안에서 다른 것처럼 표현되었습니다.
+거꾸로 참이지 않은: 코드포인트에는 문자가 할당되 않은 것도  있습니다.
+첫번째로, 사용되는 블록 안이든 상관없이, 할당되지 않은 코드포인트가 있습니다.
+두번째로 특별한 Unicode 의 컨트롤 문자가 있고, 그것들은 진짜 문자를 
+표현하지 않습니다.
 
 =begin original
 
@@ -239,18 +236,17 @@ nowhere near full of defined characters, yet.
 
 =end original
 
-Unicode について、よく知られている神話は、Unicode が、"16-ビット" である、
-というものです。
-Unicode は、C<0x0000> から、C<0xFFFF> までで、C<0x10000> (か、65536)の
-文字を表現するだけ、というものです。
-B<これは真実ではありません>。
-Unicode 2.0(1996 年 7 月)から、Unicode は、21ビット(C<0x10FFFF>)まで、
-様々に定義されています。
-Unicode 3.1(2001 年 3 月)から、文字は、C<0xFFFF> を超えて、定義されました。
-最初の C<0x10000> 文字は、
-I<Plane 0>、または、I<Basime Multilingual Plane>(BMP)と、と呼ばれました。
-Unicode 3.1 で、全部で 17(そう、17)の Plane が定義されました -- ですが、
-まだ、定義された全文字のどこにも、まだ近くにありません。
+Unicode 에 대해서 잘 알려진 신화는 Unicode 가 "16비트"라는 것입니다.
+Unicode 는 C<0x0000> 에서 C<0xFFFF> 까지로, C<0x10000>(혹은 65536) 의 
+문자를 표현하는 것 뿐이라는 것입니다.
+하지만 B<이것은 진실이 아닙니다>.
+Unicode 2.0(1996 년 7월)부터 Unicode 는 21비트(C<0x10FFFF>) 까지, 
+여러가지로 정의되었습니다.
+Unicode 3.1(2001 년 3월)부터, 문자는 C<0xFFFF> 를 넘게 정의되었습니다.
+최초의 C<0x10000> 문자는 I<Plane 0> 또는 I<Basime Multilingual Plane>(BMP)
+라고 불렸습니다. 
+Unicode 3.1 에서 전부 17개의 Plane 이 정의되었습니다. 그러나, 
+아직 정의된 모든 문자의 어디에도 아직 쉽게 찾아볼 수 없습니다.
 
 =begin original
 
@@ -266,16 +262,14 @@ For further information see L<Unicode::UCD>.
 
 =end original
 
-もう 1 つの神話は 256 文字ブロックが、何か言語を取り扱うことがある--
-それぞれのブロックは言語か言語のセットで使われている文字を
-定義するということです。
-B<これもまた真実ではありません>。
-ブロックに分割されたものはありますが、それは、ほとんど完全に、
-予想外のものです。
-代わりに、I<scripts> と呼ばれる、より有益なコンセプトがあります:
-C<Latin> script と、C<Greek> script と、その他のものがあります。
-scripts は、ふつう、いくつかのブロックの変えられた部分を測っています。
-詳しくは、L<Unicode::UCD> を見て下さい。
+또 다른 하나의 신ㅏ는 256문자 블록이 어떤 언어를 다룰 수가 있다 --
+각각의 블록은 언어가 언어 셋이고 사용되는 문자를 정의한다는 것이빈다.
+그러나, B<이것도 진실이 아닙니다>.
+블록에 분할된 것은 없지만, 그것은 대부분 완전하게 예상외의 것입니다.
+대신에 I<scripts> 라고 불리는 보다 유익한 컨셉이 있습니다:
+C<Latin> script 와 C<Greek> script 와 그 외의 것이 있습니다.
+scripts 는 보통 몇가지 블록 의 바뀐 부분을 측정하고 있습니다.
+자세한 내용은 L<Unicode::UCD> 를 봐주세요.
 
 =begin original
 
